# ai-ticket-router

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  PRD.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/seed/knowledge_base/: billing.md  general.md  returns.md  shipping.md  technical.md
deploy/: cloudflared.yml
evaluation/: dataset.jsonl
scripts/: __init__.py  run_evaluation.py  seed_kb.py
src/: __init__.py  config.py  logging_config.py  main.py
src/agent/: __init__.py  graph.py  state.py
src/agent/nodes/: classify.py  evaluate.py  respond.py  route.py  search_kb.py
src/api/: dependencies.py  middleware.py  rate_limiter.py  ticket_store.py
src/api/models/: requests.py  responses.py
src/api/routes/: health.py  knowledge_base.py  tickets.py
src/db/: __init__.py  database.py  models.py
src/frontend/: index.html
src/rag/: __init__.py  chunker.py  embeddings.py  retriever.py  vectorstore.py
tests/: __init__.py  conftest.py  test_api.py
tests/integration/: __init__.py  test_agent_flow.py
tests/unit/: __init__.py  test_chunker.py  test_classify.py  test_database.py  test_embeddings.py  test_evaluate.py  test_middleware.py  test_rate_limiter.py  test_respond.py  test_retriever.py  test_route.py  test_search_kb.py  test_ticket_store.py  test_vectorstore.py
